--- a/services.html
+++ b/services.html
@@ -3,7 +3,17 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/cu-icon-36x30.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Web development services: business websites, web applications, integrations, and automation.">
+  <link rel="canonical" href="https://www.circuitsultra.co.za/services.html">
+  <meta property="og:title" content="Services — Circuits Ultra">
+  <meta property="og:description" content="Websites, web apps, and API integrations to power your business.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.circuitsultra.co.za/services.html">
+  <meta property="og:image" content="https://www.circuitsultra.co.za/assets/images/blue-no-background.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Services — Circuits Ultra">
+  <meta name="twitter:description" content="Full‑stack web development, SaaS, dashboards, and integrations.">
+  <meta name="twitter:image" content="https://www.circuitsultra.co.za/assets/images/blue-no-background.png">
 
 
   <title>services</title>
@@ -24,6 +34,15 @@
 
 </head>
 <body>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Circuits Ultra",
+    "url": "https://www.circuitsultra.co.za/",
+    "logo": "https://www.circuitsultra.co.za/assets/images/blue-no-background.png"
+  }
+  </script>
 
   <section class="menu cid-s48OLK6784" once="menu" id="menu1-t">
 
@@ -31,7 +50,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://www.circuitsultra.co.za">
+                    <a href="https://danielp-crypto.github.io/circuits-ultra/">
                         <img src="assets/images/blue-no-background.png" alt="circuits ultra brandblogo" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -47,7 +66,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="services.html#footer3-u">Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contacts.html">Contact Us</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Platforms</a><div class="dropdown-menu"><a class="dropdown-item text-black text-primary display-4" href="https://universite.co.za">Universite</a></div></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contacts.html">Contact Us</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Portfolio</a><div class="dropdown-menu"><a class="dropdown-item text-black text-primary display-4" href="templates/construction/index.html">Construction</a><a class="dropdown-item text-black text-primary display-4" href="templates/construction/index.html">Security</a></div></li></ul>
 
 
             </div>
@@ -61,7 +80,7 @@
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1">Services</h4>
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1">Web Development Services</h4>
 
         </div>
         <div class="row mt-4">
@@ -72,8 +91,8 @@
 </a>                    </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Websites</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Corporate Website</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Your website represents your brand and should be treated like a product.We build modern websites for any business regardless of industry or size.</p>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Business & Marketing Sites</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Modern, responsive websites that load fast, rank well, and drive conversions across devices.</p>
                     </div>
 
                 </div>
@@ -84,9 +103,9 @@
                         <a name="software"><img src="assets/images/laptop-3174729_1920.jpg" alt="custom software image" title="software"></a>
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Web Apps</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">SAAS Platforms</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Web based platforms for your enterprise. </p>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Web Applications</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">SaaS & Dashboards</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Custom web apps, admin dashboards, and SaaS products with secure, scalable backends.</p>
                     </div>
 
                 </div>
@@ -97,9 +116,9 @@
                         <a name="consulting"><img src="assets/images/software-dev-640x444.png" alt="I.T consulting image" title="consulting services"></a>
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Enterprise Software</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Problem solving</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Bespoke solutions for your business.</p>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Custom Integrations</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">APIs & Automation</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Integrate payment gateways, CRMs, and third‑party APIs. Automate workflows to save time.</p>
                     </div>
 
                 </div>
